# lines

./: README.md  lines.bat  script.py
lines/: README.md  __init__.py  deep_search.py  pyproject.toml  script.py
lines/lines/: __main__.py
