[project]
name = "lines"
dynamic = ["version"]
description = "Count how many lines your project has"
authors = [
    { name = "Havsalt", email = "knutolaihelgesen@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
"main" = "lines:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.version]
path = "lines/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = ["lines/**", "lines.bat"]
exclude = ["lines/**/__pycache__"]
